# templates

./: .gitignore  AboutTemplates.md  CMakeLists.txt  README.md  templates.h
src/: main.cpp  templates.h
test/: templates_test.cpp
